# password-vault

./: .gitignore  Cargo.toml  LICENSE  README.md
src/: encryption.rs  error.rs  main.rs  password.rs  vault.rs
